--- a/index.html
+++ b/index.html
@@ -16,31 +16,12 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 <div id="app">
-    <header>
-        <div class="logo">
-            <div class="product-image">
-                <img :src="image" :alt="altText"/>
-            </div>
-        </div>
-        <h1>Vue Kanban Board</h1>
-    </header>
+
     <div class="board">
-        <div class="column" v-for="(column, index) in columns" :key="index">
-            <h2>{{ column.title }}</h2>
-            <product :product="column"></product>
-        </div>
+        <add-task @add-task="addTask"></add-task>
+        <column v-for="(column, index) in columns" :key="index" :column="column" @save="saveData"></column>
     </div>
 </div>
-<!--<div id="app">-->
-<!--    <div class="product">-->
-<!--        <div class="product-image">-->
-<!--            <img :src="image" :alt="altText"/>-->
-<!--        </div>-->
-<!--        <div class="product-info">-->
-<!--            <h1>{{ product }}</h1>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 
 
