--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@ initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 <div id="app">
-
     <div class="board">
         <add-task @add-task="addTask"></add-task>
-        <column v-for="(column, index) in columns" :key="index" :column="column" @save="saveData" @move-task="moveTask"></column>
+        <column v-for="(column, index) in columns" :class="{disabled:column.disabled}" :key="index" :column="column" @save="saveData"  @move-task="moveTask"></column>
     </div>
 </div>
 
